cabal-version: 3.0
name: masstree
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Eric Demko
maintainer: edemko@layer3com.com
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Masstree
    Data.Masstree.BTree
  other-modules:
    Data.Masstree.Utils
  -- other-extensions:
  build-depends:
    , base >=4.12
    , byteslice >=0.2.3.0
    , contiguous >=0.5.1
    , primitive >=0.7
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , masstree
    , tasty >=1.2.3
    , tasty-hunit >=0.10.0.2
    , quickcheck-classes-base >=0.6
    , tasty-quickcheck >=0.10
    , contiguous
    , containers
    , primitive

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , gauge
    , masstree
    , containers
    , random >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs

benchmark bench-size
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , compact
    , masstree
    , containers
    , random >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench-size
  main-is: Main.hs
