cabal-version: 3.0
name: masstree
version: 0.1.0.0
homepage: https://github.com/Zankoku-Okuno/masstree
bug-reports: https://github.com/Zankoku-Okuno/masstree/issues
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2020 Eric Demko
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files: README.md, CHANGELOG.md
synopsis: fast maps for text-like keys
category: Data
description:
  This package provides a Masstree data structure based on the paper
  "Cache  Craftiness  for  Fast  Multicore  Key-Value  Storage" by Mao, Kohler, and Morris
  (<https://pdos.csail.mit.edu/papers/masstree:eurosys12.pdf>).
  The key idea is a trie which achieves a fanout of 2^64 by using a B+-tree at
  each node. Where their paper focuses on supporting efficient concurrent
  update, that approach is not idiomatic in Haskell, so we focused instead on a
  persistent form of masstree.
  
  Incidentally, we also expose a standalone @BTree@ implementation which
  outperforms @Map Word64@ from the containers package, but to only supports
  @Word64@ keys (and if you can't guess how this limitation is related to the
  2^64 fanout mentioned above, I'd be one surprised pickachu face).

library
  exposed-modules:
    Data.Masstree
    Data.Masstree.BTree
  other-modules:
    Data.Masstree.Utils
  -- other-extensions:
  build-depends:
    , base >=4.12
    , byteslice >=0.2.3.0
    , contiguous >=0.6.1 && <0.7
    , primitive >=0.7
    , run-st >=0.1.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , byteslice
    , containers
    , contiguous
    , masstree
    , primitive
    , quickcheck-classes-base >=0.6
    , tasty >=1.2.3
    , tasty-hunit >=0.10.0.2
    , tasty-quickcheck >=0.10

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , containers
    , gauge
    , masstree
    , random >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs

benchmark bench-size
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , compact
    , containers
    , masstree
    , random >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench-size
  main-is: Main.hs
